2000-04-13  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/ebook/e-card.c (e_card_get_vcard): save out
	the title to the vcard.

	* addressbook/backend/ebook/test-card.c: add title field foo to
	the test.

	* addressbook/backend/ebook/e-card.c: reflect the title field.

	* addressbook/backend/ebook/e-card.h: un-#if 0 the title field.

	* addressbook/backend/pas/pas-backend-ldap.c (poll_ldap): new
	function that polls ldap for more search responses.
	(pas_backend_ldap_search): use the async search interface and
	register an idle call to poll for the responses.
	(view_destroy): make sure to g_source_remove the idle id.

2000-04-12  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c (entry_compare):
	rework this function to use a table mapping search field names to
	vcard properties and extra information (such as whether or not the
	property is a list.)
	
	* addressbook/backend/pas/pas-backend-ldap.c
	(construct_email_list): new function, to build the ECardList for
	email addresses.
	(construct_phone_list): new function, to build the ECardList for
	phone numbers.
	(pas_backend_ldap_search): use a table mapping ldap attributes to
	ecard properties, and use the special list construction functions
	if the property calls for it.  general cleanup.  added a comment
	about not calling ber_free if there was a decoding error.


2000-04-12  Matt Loper  <matt@helixcode.com>

	* art/Makefile.am: Add tigert's contact-dlg-related images.

	* addressbook/contact-editor/e-contact-editor.c (_add_images): Add
	tigert's images.

	* addressbook/contact-editor/Makefile.am: add EVOLUTION_IMAGES.

2000-04-12  Tuomas Kuosmanen  <tigert@gimp.org>

	* art/house.png, art/malehead.png, art/cellphone.png, 
	art/briefcase.png, art/envelope.png, art/globe.png:
	New icons for the contact manager.. more to follow once I get 
	around to do more artist work..

2000-04-12  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-ldap.c